// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When urlSchema is set to manual Basic case, no url prefix, or suffix it should have extracted or infered the title 1`] = `
Array [
  Array [
    "docs/about.md",
    "About the project",
  ],
  Array [
    "docs/how-it-works.md",
    "How it works?",
  ],
  Array [
    "packages/package1/components/button.md",
    "Button Component",
  ],
  Array [
    "packages/package1/components/form/index.md",
    "Form Component",
  ],
  Array [
    "packages/package1/docs/intro.md",
    "Docs Intro",
  ],
  Array [
    "packages/package2/docs/overview.md",
    "Overview",
  ],
  Array [
    "packages/package2/docs/styles.md",
    "How styles work",
  ],
]
`;

exports[`When urlSchema is set to manual Basic case, no url prefix, or suffix it should have fixed the links between files 1`] = `
"<h1 id=\\"this-is-the-overview-page\\">This is the overview page</h1>
<p>This is a <a href=\\"/category1/components/button\\">link to another file in a different package</a>.</p>
"
`;

exports[`When urlSchema is set to manual Basic case, no url prefix, or suffix it should have fixed the links between files 2`] = `
"<h1 id=\\"how-styles-work\\">How styles work</h1>
<p>Short description.</p>
<p>Please refer to <a href=\\"/category2/overview\\">overview</a> to get started.</p>
"
`;

exports[`When urlSchema is set to manual Basic case, no url prefix, or suffix it should have generated urls based on frontmatter and should have used urlPrefix 1`] = `
Array [
  Array [
    "docs/about.md",
    "/about",
  ],
  Array [
    "docs/how-it-works.md",
    "/how-it-works",
  ],
  Array [
    "packages/package1/components/button.md",
    "/category1/components/button",
  ],
  Array [
    "packages/package1/components/form/index.md",
    "/category1/components/form/",
  ],
  Array [
    "packages/package1/docs/intro.md",
    "/category1/intro",
  ],
  Array [
    "packages/package2/docs/overview.md",
    "/category2/overview",
  ],
  Array [
    "packages/package2/docs/styles.md",
    "/category2/styles",
  ],
]
`;

exports[`When urlSchema is set to manual When source defines url prefix and suffix it should have fixed the links between files 1`] = `
"<h1 id=\\"this-is-the-overview-page\\">This is the overview page</h1>
<p>This is a <a href=\\"/docs/category1/components/button.html\\">link to another file in a different package</a>.</p>
"
`;

exports[`When urlSchema is set to manual When source defines url prefix and suffix it should have fixed the links between files 2`] = `
"<h1 id=\\"how-styles-work\\">How styles work</h1>
<p>Short description.</p>
<p>Please refer to <a href=\\"/docs/category2/overview.html\\">overview</a> to get started.</p>
"
`;

exports[`When urlSchema is set to manual When source defines url prefix and suffix it should have generated urls based on frontmatter and should have used urlPrefix 1`] = `
Array [
  Array [
    "docs/about.md",
    "/docs/about.html",
  ],
  Array [
    "docs/how-it-works.md",
    "/docs/how-it-works.html",
  ],
  Array [
    "packages/package1/components/button.md",
    "/docs/category1/components/button.html",
  ],
  Array [
    "packages/package1/components/form/index.md",
    "/docs/category1/components/form/",
  ],
  Array [
    "packages/package1/docs/intro.md",
    "/docs/category1/intro.html",
  ],
  Array [
    "packages/package2/docs/overview.md",
    "/docs/category2/overview.html",
  ],
  Array [
    "packages/package2/docs/styles.md",
    "/docs/category2/styles.html",
  ],
]
`;
